--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1 align="center">Works log</h1>
+    {% if current_user.is_authenticated %}
+        <a href="addjob" class="btn btn-secondary">Добавить новость</a>
+    {% endif %}
     {% for job in jobs %}
 <h2>Action # {{ job.id }}</h2>
     <table class="table">
@@ -19,6 +22,16 @@
             <th>{{job.collaborators}}</th>
             <th>{{job.is_finished}}</th>
         </tr>
+        {% if current_user.is_authenticated and current_user.id == job.team_leader or current_user.id == 1 %}
+            <div>
+                <a href="/jobs/{{job.id}}" class="btn btn-warning">
+            Изменить
+                </a>
+                <a href="/job_delete/{{job.id}}" class="btn btn-danger">
+            Удалить
+                </a>
+            </div>
+        {% endif %}
         </table>
     {% endfor %}
 {% endblock %}
