--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,19 @@
 
 {% block content %}
     <h1 align="center">Works log</h1>
+    <a href="/departments" class="btn btn-secondary">To departments</a>
     {% if current_user.is_authenticated %}
-        <a href="addjob" class="btn btn-secondary">Добавить новость</a>
+        <a href="addjob" class="btn btn-secondary">Add a Job</a>
     {% endif %}
     {% for job in jobs %}
 <h2>Action # {{ job.id }}</h2>
     <table class="table">
         <tr>
-            <th style="background-color: #999">Title of activity</th>
-            <th style="background-color: #999">Team leader</th>
-            <th style="background-color: #999">Duration</th>
-            <th style="background-color: #999">List of collaborators</th>
-            <th style="background-color: #999">Is finished</th>
+            <th style="background-color: #999;width: 250px;">Title of activity</th>
+            <th style="background-color: #999;width: 100px;">Team leader</th>
+            <th style="background-color: #999;width: 50px;">Duration</th>
+            <th style="background-color: #999;width: 150px;">List of collaborators</th>
+            <th style="background-color: #999;width: 100px;">Is finished</th>
         </tr>
         <tr>
             <td style="background-color: #AAD">{{job.job}}</td>
@@ -30,10 +31,10 @@
         {% if current_user.is_authenticated and current_user.id == job.team_leader or current_user.id == 1 %}
             <div>
                 <a href="/jobs/{{job.id}}" class="btn btn-warning">
-            Изменить
+            Edit Job
                 </a>
                 <a href="/job_delete/{{job.id}}" class="btn btn-danger">
-            Удалить
+            Delete Job
                 </a>
             </div>
         {% endif %}
